# LLVMIRtoDot

./: .clang-format  CMakeLists.txt  README.md  comp.sh  main.cpp  main.dot
.cache/clangd/index/: main.cpp.E165A1836215069B.idx
tests/: gentest.sh  test01.c  test01.c.dot  test01.c.ll  test01.c.ll.ll
